Compilador/Proyect/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AND
    COMILLADOBLE
    COMILLASIMPLE
    CORCHETE_A
    CORCHETE_B
    FROM
    FUN
    IMPORT
    NOT
    OR
    PUNTO
    REAL_LIT
    RETURN
    SENSOR_PIR

Grammar

Rule 0     S' -> programa
Rule 1     programa -> BEGIN bloque_codigo END
Rule 2     bloque_codigo -> LLAVE_A lista_declaraciones LLAVE_C
Rule 3     lista_declaraciones -> lista_declaraciones declaracion
Rule 4     lista_declaraciones -> lista_declaraciones si
Rule 5     lista_declaraciones -> lista_declaraciones mientras
Rule 6     lista_declaraciones -> lista_declaraciones for_loop
Rule 7     lista_declaraciones -> declaracion
Rule 8     lista_declaraciones -> si
Rule 9     lista_declaraciones -> mientras
Rule 10    lista_declaraciones -> for_loop
Rule 11    declaracion -> tipo ID ASIGNACION expresion PUNTOCOMA
Rule 12    declaracion -> tipo ID ASIGNACION expresion
Rule 13    declaracion -> tipo ID ASIGNACION PUNTOCOMA
Rule 14    tipo -> INT
Rule 15    tipo -> BOOL
Rule 16    tipo -> STG
Rule 17    tipo -> REAL
Rule 18    expresion -> expresion SUMA expresion
Rule 19    expresion -> expresion RESTA expresion
Rule 20    expresion -> expresion MULTIPLICACION expresion
Rule 21    expresion -> expresion DIVISION expresion
Rule 22    expresion -> expresion MENORQUE expresion
Rule 23    expresion -> expresion MENORIGUAL expresion
Rule 24    expresion -> expresion MAYORQUE expresion
Rule 25    expresion -> expresion MAYORIGUAL expresion
Rule 26    expresion -> expresion IGUAL expresion
Rule 27    expresion -> expresion DIFERENTE expresion
Rule 28    expresion -> PARENTESIS_A expresion PARENTESIS_B
Rule 29    expresion -> NUMERO
Rule 30    expresion -> REAL
Rule 31    expresion -> CADENA
Rule 32    expresion -> TRUE
Rule 33    expresion -> FALSE
Rule 34    si -> IF PARENTESIS_A expresion PARENTESIS_B bloque_codigo
Rule 35    si -> IF PARENTESIS_A expresion PARENTESIS_B bloque_codigo ELSE bloque_codigo
Rule 36    mientras -> WHILE PARENTESIS_A expresion PARENTESIS_B bloque_codigo
Rule 37    for_loop -> FOR PARENTESIS_A for_init PUNTOCOMA for_condicion PUNTOCOMA for_actualizacion PARENTESIS_B bloque_codigo
Rule 38    for_init -> tipo ID ASIGNACION expresion
Rule 39    for_init -> ID ASIGNACION expresion
Rule 40    for_condicion -> expresion
Rule 41    for_actualizacion -> ID ASIGNACION expresion
Rule 42    for_actualizacion -> ID MASMAS
Rule 43    for_actualizacion -> ID MENOSMENOS
Rule 44    lista_declaraciones -> MOVE_TO PARENTESIS_A NUMERO COMA NUMERO PARENTESIS_B PUNTOCOMA
Rule 45    lista_declaraciones -> WAIT_MOTION PARENTESIS_A PARENTESIS_B PUNTOCOMA
Rule 46    lista_declaraciones -> START_RECORD PARENTESIS_A PARENTESIS_B PUNTOCOMA
Rule 47    lista_declaraciones -> STOP_RECORD PARENTESIS_A PARENTESIS_B PUNTOCOMA
Rule 48    lista_declaraciones -> LIGHT_ON PUNTOCOMA
Rule 49    lista_declaraciones -> LIGHT_OFF PUNTOCOMA
Rule 50    lista_declaraciones -> ALARM_ON PUNTOCOMA
Rule 51    lista_declaraciones -> ALARM_OFF PUNTOCOMA
Rule 52    lista_declaraciones -> STOP PUNTOCOMA

Terminals, with rules where they appear

ALARM_OFF            : 51
ALARM_ON             : 50
AND                  : 
ASIGNACION           : 11 12 13 38 39 41
BEGIN                : 1
BOOL                 : 15
CADENA               : 31
COMA                 : 44
COMILLADOBLE         : 
COMILLASIMPLE        : 
CORCHETE_A           : 
CORCHETE_B           : 
DIFERENTE            : 27
DIVISION             : 21
ELSE                 : 35
END                  : 1
FALSE                : 33
FOR                  : 37
FROM                 : 
FUN                  : 
ID                   : 11 12 13 38 39 41 42 43
IF                   : 34 35
IGUAL                : 26
IMPORT               : 
INT                  : 14
LIGHT_OFF            : 49
LIGHT_ON             : 48
LLAVE_A              : 2
LLAVE_C              : 2
MASMAS               : 42
MAYORIGUAL           : 25
MAYORQUE             : 24
MENORIGUAL           : 23
MENORQUE             : 22
MENOSMENOS           : 43
MOVE_TO              : 44
MULTIPLICACION       : 20
NOT                  : 
NUMERO               : 29 44 44
OR                   : 
PARENTESIS_A         : 28 34 35 36 37 44 45 46 47
PARENTESIS_B         : 28 34 35 36 37 44 45 46 47
PUNTO                : 
PUNTOCOMA            : 11 13 37 37 44 45 46 47 48 49 50 51 52
REAL                 : 17 30
REAL_LIT             : 
RESTA                : 19
RETURN               : 
SENSOR_PIR           : 
START_RECORD         : 46
STG                  : 16
STOP                 : 52
STOP_RECORD          : 47
SUMA                 : 18
TRUE                 : 32
WAIT_MOTION          : 45
WHILE                : 36
error                : 

Nonterminals, with rules where they appear

bloque_codigo        : 1 34 35 35 36 37
declaracion          : 3 7
expresion            : 11 12 18 18 19 19 20 20 21 21 22 22 23 23 24 24 25 25 26 26 27 27 28 34 35 36 38 39 40 41
for_actualizacion    : 37
for_condicion        : 37
for_init             : 37
for_loop             : 6 10
lista_declaraciones  : 2 3 4 5 6
mientras             : 5 9
programa             : 0
si                   : 4 8
tipo                 : 11 12 13 38

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . BEGIN bloque_codigo END

    BEGIN           shift and go to state 2

    programa                       shift and go to state 1

state 1

    (0) S' -> programa .



state 2

    (1) programa -> BEGIN . bloque_codigo END
    (2) bloque_codigo -> . LLAVE_A lista_declaraciones LLAVE_C

    LLAVE_A         shift and go to state 4

    bloque_codigo                  shift and go to state 3

state 3

    (1) programa -> BEGIN bloque_codigo . END

    END             shift and go to state 5


state 4

    (2) bloque_codigo -> LLAVE_A . lista_declaraciones LLAVE_C
    (3) lista_declaraciones -> . lista_declaraciones declaracion
    (4) lista_declaraciones -> . lista_declaraciones si
    (5) lista_declaraciones -> . lista_declaraciones mientras
    (6) lista_declaraciones -> . lista_declaraciones for_loop
    (7) lista_declaraciones -> . declaracion
    (8) lista_declaraciones -> . si
    (9) lista_declaraciones -> . mientras
    (10) lista_declaraciones -> . for_loop
    (44) lista_declaraciones -> . MOVE_TO PARENTESIS_A NUMERO COMA NUMERO PARENTESIS_B PUNTOCOMA
    (45) lista_declaraciones -> . WAIT_MOTION PARENTESIS_A PARENTESIS_B PUNTOCOMA
    (46) lista_declaraciones -> . START_RECORD PARENTESIS_A PARENTESIS_B PUNTOCOMA
    (47) lista_declaraciones -> . STOP_RECORD PARENTESIS_A PARENTESIS_B PUNTOCOMA
    (48) lista_declaraciones -> . LIGHT_ON PUNTOCOMA
    (49) lista_declaraciones -> . LIGHT_OFF PUNTOCOMA
    (50) lista_declaraciones -> . ALARM_ON PUNTOCOMA
    (51) lista_declaraciones -> . ALARM_OFF PUNTOCOMA
    (52) lista_declaraciones -> . STOP PUNTOCOMA
    (11) declaracion -> . tipo ID ASIGNACION expresion PUNTOCOMA
    (12) declaracion -> . tipo ID ASIGNACION expresion
    (13) declaracion -> . tipo ID ASIGNACION PUNTOCOMA
    (34) si -> . IF PARENTESIS_A expresion PARENTESIS_B bloque_codigo
    (35) si -> . IF PARENTESIS_A expresion PARENTESIS_B bloque_codigo ELSE bloque_codigo
    (36) mientras -> . WHILE PARENTESIS_A expresion PARENTESIS_B bloque_codigo
    (37) for_loop -> . FOR PARENTESIS_A for_init PUNTOCOMA for_condicion PUNTOCOMA for_actualizacion PARENTESIS_B bloque_codigo
    (14) tipo -> . INT
    (15) tipo -> . BOOL
    (16) tipo -> . STG
    (17) tipo -> . REAL

    MOVE_TO         shift and go to state 11
    WAIT_MOTION     shift and go to state 12
    START_RECORD    shift and go to state 13
    STOP_RECORD     shift and go to state 14
    LIGHT_ON        shift and go to state 15
    LIGHT_OFF       shift and go to state 16
    ALARM_ON        shift and go to state 17
    ALARM_OFF       shift and go to state 18
    STOP            shift and go to state 19
    IF              shift and go to state 21
    WHILE           shift and go to state 22
    FOR             shift and go to state 23
    INT             shift and go to state 24
    BOOL            shift and go to state 25
    STG             shift and go to state 26
    REAL            shift and go to state 27

    lista_declaraciones            shift and go to state 6
    declaracion                    shift and go to state 7
    si                             shift and go to state 8
    mientras                       shift and go to state 9
    for_loop                       shift and go to state 10
    tipo                           shift and go to state 20

state 5

    (1) programa -> BEGIN bloque_codigo END .

    $end            reduce using rule 1 (programa -> BEGIN bloque_codigo END .)


state 6

    (2) bloque_codigo -> LLAVE_A lista_declaraciones . LLAVE_C
    (3) lista_declaraciones -> lista_declaraciones . declaracion
    (4) lista_declaraciones -> lista_declaraciones . si
    (5) lista_declaraciones -> lista_declaraciones . mientras
    (6) lista_declaraciones -> lista_declaraciones . for_loop
    (11) declaracion -> . tipo ID ASIGNACION expresion PUNTOCOMA
    (12) declaracion -> . tipo ID ASIGNACION expresion
    (13) declaracion -> . tipo ID ASIGNACION PUNTOCOMA
    (34) si -> . IF PARENTESIS_A expresion PARENTESIS_B bloque_codigo
    (35) si -> . IF PARENTESIS_A expresion PARENTESIS_B bloque_codigo ELSE bloque_codigo
    (36) mientras -> . WHILE PARENTESIS_A expresion PARENTESIS_B bloque_codigo
    (37) for_loop -> . FOR PARENTESIS_A for_init PUNTOCOMA for_condicion PUNTOCOMA for_actualizacion PARENTESIS_B bloque_codigo
    (14) tipo -> . INT
    (15) tipo -> . BOOL
    (16) tipo -> . STG
    (17) tipo -> . REAL

    LLAVE_C         shift and go to state 28
    IF              shift and go to state 21
    WHILE           shift and go to state 22
    FOR             shift and go to state 23
    INT             shift and go to state 24
    BOOL            shift and go to state 25
    STG             shift and go to state 26
    REAL            shift and go to state 27

    declaracion                    shift and go to state 29
    si                             shift and go to state 30
    mientras                       shift and go to state 31
    for_loop                       shift and go to state 32
    tipo                           shift and go to state 20

state 7

    (7) lista_declaraciones -> declaracion .

    LLAVE_C         reduce using rule 7 (lista_declaraciones -> declaracion .)
    IF              reduce using rule 7 (lista_declaraciones -> declaracion .)
    WHILE           reduce using rule 7 (lista_declaraciones -> declaracion .)
    FOR             reduce using rule 7 (lista_declaraciones -> declaracion .)
    INT             reduce using rule 7 (lista_declaraciones -> declaracion .)
    BOOL            reduce using rule 7 (lista_declaraciones -> declaracion .)
    STG             reduce using rule 7 (lista_declaraciones -> declaracion .)
    REAL            reduce using rule 7 (lista_declaraciones -> declaracion .)


state 8

    (8) lista_declaraciones -> si .

    LLAVE_C         reduce using rule 8 (lista_declaraciones -> si .)
    IF              reduce using rule 8 (lista_declaraciones -> si .)
    WHILE           reduce using rule 8 (lista_declaraciones -> si .)
    FOR             reduce using rule 8 (lista_declaraciones -> si .)
    INT             reduce using rule 8 (lista_declaraciones -> si .)
    BOOL            reduce using rule 8 (lista_declaraciones -> si .)
    STG             reduce using rule 8 (lista_declaraciones -> si .)
    REAL            reduce using rule 8 (lista_declaraciones -> si .)


state 9

    (9) lista_declaraciones -> mientras .

    LLAVE_C         reduce using rule 9 (lista_declaraciones -> mientras .)
    IF              reduce using rule 9 (lista_declaraciones -> mientras .)
    WHILE           reduce using rule 9 (lista_declaraciones -> mientras .)
    FOR             reduce using rule 9 (lista_declaraciones -> mientras .)
    INT             reduce using rule 9 (lista_declaraciones -> mientras .)
    BOOL            reduce using rule 9 (lista_declaraciones -> mientras .)
    STG             reduce using rule 9 (lista_declaraciones -> mientras .)
    REAL            reduce using rule 9 (lista_declaraciones -> mientras .)


state 10

    (10) lista_declaraciones -> for_loop .

    LLAVE_C         reduce using rule 10 (lista_declaraciones -> for_loop .)
    IF              reduce using rule 10 (lista_declaraciones -> for_loop .)
    WHILE           reduce using rule 10 (lista_declaraciones -> for_loop .)
    FOR             reduce using rule 10 (lista_declaraciones -> for_loop .)
    INT             reduce using rule 10 (lista_declaraciones -> for_loop .)
    BOOL            reduce using rule 10 (lista_declaraciones -> for_loop .)
    STG             reduce using rule 10 (lista_declaraciones -> for_loop .)
    REAL            reduce using rule 10 (lista_declaraciones -> for_loop .)


state 11

    (44) lista_declaraciones -> MOVE_TO . PARENTESIS_A NUMERO COMA NUMERO PARENTESIS_B PUNTOCOMA

    PARENTESIS_A    shift and go to state 33


state 12

    (45) lista_declaraciones -> WAIT_MOTION . PARENTESIS_A PARENTESIS_B PUNTOCOMA

    PARENTESIS_A    shift and go to state 34


state 13

    (46) lista_declaraciones -> START_RECORD . PARENTESIS_A PARENTESIS_B PUNTOCOMA

    PARENTESIS_A    shift and go to state 35


state 14

    (47) lista_declaraciones -> STOP_RECORD . PARENTESIS_A PARENTESIS_B PUNTOCOMA

    PARENTESIS_A    shift and go to state 36


state 15

    (48) lista_declaraciones -> LIGHT_ON . PUNTOCOMA

    PUNTOCOMA       shift and go to state 37


state 16

    (49) lista_declaraciones -> LIGHT_OFF . PUNTOCOMA

    PUNTOCOMA       shift and go to state 38


state 17

    (50) lista_declaraciones -> ALARM_ON . PUNTOCOMA

    PUNTOCOMA       shift and go to state 39


state 18

    (51) lista_declaraciones -> ALARM_OFF . PUNTOCOMA

    PUNTOCOMA       shift and go to state 40


state 19

    (52) lista_declaraciones -> STOP . PUNTOCOMA

    PUNTOCOMA       shift and go to state 41


state 20

    (11) declaracion -> tipo . ID ASIGNACION expresion PUNTOCOMA
    (12) declaracion -> tipo . ID ASIGNACION expresion
    (13) declaracion -> tipo . ID ASIGNACION PUNTOCOMA

    ID              shift and go to state 42


state 21

    (34) si -> IF . PARENTESIS_A expresion PARENTESIS_B bloque_codigo
    (35) si -> IF . PARENTESIS_A expresion PARENTESIS_B bloque_codigo ELSE bloque_codigo

    PARENTESIS_A    shift and go to state 43


state 22

    (36) mientras -> WHILE . PARENTESIS_A expresion PARENTESIS_B bloque_codigo

    PARENTESIS_A    shift and go to state 44


state 23

    (37) for_loop -> FOR . PARENTESIS_A for_init PUNTOCOMA for_condicion PUNTOCOMA for_actualizacion PARENTESIS_B bloque_codigo

    PARENTESIS_A    shift and go to state 45


state 24

    (14) tipo -> INT .

    ID              reduce using rule 14 (tipo -> INT .)


state 25

    (15) tipo -> BOOL .

    ID              reduce using rule 15 (tipo -> BOOL .)


state 26

    (16) tipo -> STG .

    ID              reduce using rule 16 (tipo -> STG .)


state 27

    (17) tipo -> REAL .

    ID              reduce using rule 17 (tipo -> REAL .)


state 28

    (2) bloque_codigo -> LLAVE_A lista_declaraciones LLAVE_C .

    END             reduce using rule 2 (bloque_codigo -> LLAVE_A lista_declaraciones LLAVE_C .)
    ELSE            reduce using rule 2 (bloque_codigo -> LLAVE_A lista_declaraciones LLAVE_C .)
    LLAVE_C         reduce using rule 2 (bloque_codigo -> LLAVE_A lista_declaraciones LLAVE_C .)
    IF              reduce using rule 2 (bloque_codigo -> LLAVE_A lista_declaraciones LLAVE_C .)
    WHILE           reduce using rule 2 (bloque_codigo -> LLAVE_A lista_declaraciones LLAVE_C .)
    FOR             reduce using rule 2 (bloque_codigo -> LLAVE_A lista_declaraciones LLAVE_C .)
    INT             reduce using rule 2 (bloque_codigo -> LLAVE_A lista_declaraciones LLAVE_C .)
    BOOL            reduce using rule 2 (bloque_codigo -> LLAVE_A lista_declaraciones LLAVE_C .)
    STG             reduce using rule 2 (bloque_codigo -> LLAVE_A lista_declaraciones LLAVE_C .)
    REAL            reduce using rule 2 (bloque_codigo -> LLAVE_A lista_declaraciones LLAVE_C .)


state 29

    (3) lista_declaraciones -> lista_declaraciones declaracion .

    LLAVE_C         reduce using rule 3 (lista_declaraciones -> lista_declaraciones declaracion .)
    IF              reduce using rule 3 (lista_declaraciones -> lista_declaraciones declaracion .)
    WHILE           reduce using rule 3 (lista_declaraciones -> lista_declaraciones declaracion .)
    FOR             reduce using rule 3 (lista_declaraciones -> lista_declaraciones declaracion .)
    INT             reduce using rule 3 (lista_declaraciones -> lista_declaraciones declaracion .)
    BOOL            reduce using rule 3 (lista_declaraciones -> lista_declaraciones declaracion .)
    STG             reduce using rule 3 (lista_declaraciones -> lista_declaraciones declaracion .)
    REAL            reduce using rule 3 (lista_declaraciones -> lista_declaraciones declaracion .)


state 30

    (4) lista_declaraciones -> lista_declaraciones si .

    LLAVE_C         reduce using rule 4 (lista_declaraciones -> lista_declaraciones si .)
    IF              reduce using rule 4 (lista_declaraciones -> lista_declaraciones si .)
    WHILE           reduce using rule 4 (lista_declaraciones -> lista_declaraciones si .)
    FOR             reduce using rule 4 (lista_declaraciones -> lista_declaraciones si .)
    INT             reduce using rule 4 (lista_declaraciones -> lista_declaraciones si .)
    BOOL            reduce using rule 4 (lista_declaraciones -> lista_declaraciones si .)
    STG             reduce using rule 4 (lista_declaraciones -> lista_declaraciones si .)
    REAL            reduce using rule 4 (lista_declaraciones -> lista_declaraciones si .)


state 31

    (5) lista_declaraciones -> lista_declaraciones mientras .

    LLAVE_C         reduce using rule 5 (lista_declaraciones -> lista_declaraciones mientras .)
    IF              reduce using rule 5 (lista_declaraciones -> lista_declaraciones mientras .)
    WHILE           reduce using rule 5 (lista_declaraciones -> lista_declaraciones mientras .)
    FOR             reduce using rule 5 (lista_declaraciones -> lista_declaraciones mientras .)
    INT             reduce using rule 5 (lista_declaraciones -> lista_declaraciones mientras .)
    BOOL            reduce using rule 5 (lista_declaraciones -> lista_declaraciones mientras .)
    STG             reduce using rule 5 (lista_declaraciones -> lista_declaraciones mientras .)
    REAL            reduce using rule 5 (lista_declaraciones -> lista_declaraciones mientras .)


state 32

    (6) lista_declaraciones -> lista_declaraciones for_loop .

    LLAVE_C         reduce using rule 6 (lista_declaraciones -> lista_declaraciones for_loop .)
    IF              reduce using rule 6 (lista_declaraciones -> lista_declaraciones for_loop .)
    WHILE           reduce using rule 6 (lista_declaraciones -> lista_declaraciones for_loop .)
    FOR             reduce using rule 6 (lista_declaraciones -> lista_declaraciones for_loop .)
    INT             reduce using rule 6 (lista_declaraciones -> lista_declaraciones for_loop .)
    BOOL            reduce using rule 6 (lista_declaraciones -> lista_declaraciones for_loop .)
    STG             reduce using rule 6 (lista_declaraciones -> lista_declaraciones for_loop .)
    REAL            reduce using rule 6 (lista_declaraciones -> lista_declaraciones for_loop .)


state 33

    (44) lista_declaraciones -> MOVE_TO PARENTESIS_A . NUMERO COMA NUMERO PARENTESIS_B PUNTOCOMA

    NUMERO          shift and go to state 46


state 34

    (45) lista_declaraciones -> WAIT_MOTION PARENTESIS_A . PARENTESIS_B PUNTOCOMA

    PARENTESIS_B    shift and go to state 47


state 35

    (46) lista_declaraciones -> START_RECORD PARENTESIS_A . PARENTESIS_B PUNTOCOMA

    PARENTESIS_B    shift and go to state 48


state 36

    (47) lista_declaraciones -> STOP_RECORD PARENTESIS_A . PARENTESIS_B PUNTOCOMA

    PARENTESIS_B    shift and go to state 49


state 37

    (48) lista_declaraciones -> LIGHT_ON PUNTOCOMA .
